# netradiant-custom

./: .cproject  .editorconfig  .gitattributes  .gitignore  .patchsets  .project  .travis.yml  CMakeLists.txt  COMPILING  CONTRIBUTORS  ChangeLog  ChangeLog.idsoftware  Makefile  Makefile.conf  Makefile.conf.common  Makefile.conf.linux  Makefile.conf.win32  Makefile.conf.win64  README  README.md  TODO  appimage.sh  appveyor.yml  branch-manager  completebuild.sh  conftest.cpp  cross-Makefile.conf  download-gamepacks.sh  generic_cpp.py  generic_h.py  install-dlls-fedora.sh  install-dlls-msys2-mingw.sh  install-dlls.sh  install-dylibs.sh  install-gamepack.sh  install-gamepacks.sh  merge-from-zerowing.sh  mingw-Makefile.conf  mingw-Makefile.inc  mingw-fedora-Makefile.conf  (+8 more)
contrib/: CMakeLists.txt
contrib/bkgrnd2d/: CMakeLists.txt  bkgrnd2d.cpp  bkgrnd2d.h  dialog.cpp  dialog.h  plugin.cpp  plugin.h  readme_bkgrnd2d-b0.25.txt
contrib/bobtoolz/: CMakeLists.txt  CPortals.h  DBobView.cpp  DBobView.h  DBrush.cpp  DBrush.h  DEPair.cpp  DEPair.h  DEntity.cpp  DEntity.h  DMap.cpp  DMap.h  DPatch.cpp  DPatch.h  DPlane.cpp  DPlane.h  DPoint.cpp  DPoint.h  DShape.cpp  DShape.h  DTrainDrawer.cpp  DTrainDrawer.h  DTreePlanter.cpp  DTreePlanter.h  DVisDrawer.cpp  DVisDrawer.h  DWinding.cpp  DWinding.h  ScriptParser.cpp  ScriptParser.h  StdAfx.h  bobToolz-GTK.cpp  bobToolz-GTK.h  bobToolz.h  bsploader.cpp  bsploader.h  cportals.cpp  ctfToolz-GTK.cpp  funchandlers-GTK.cpp  funchandlers-ctf-GTK.cpp  (+10 more)
contrib/brushexport/: CMakeLists.txt  brushexport.def  callbacks.cpp  callbacks.h  export.cpp  export.h  interface.cpp  plugin.cpp  plugin.h  support.cpp  support.h
contrib/camera/: CMakeLists.txt  camera.cpp  camera.h  dialogs.cpp  dialogs.h  dialogs_common.cpp  funchandlers.cpp  funchandlers.h  listener.cpp  listener.h  misc.cpp  misc.h  renderer.cpp  renderer.h
contrib/gtkgensurf/: CMakeLists.txt  bitmap.cpp  dec.cpp  face.cpp  font.cpp  gendlgs.cpp  genmap.cpp  gensurf.cpp  gensurf.h  heretic.cpp  plugin.cpp  triangle.h  view.cpp
contrib/hydratoolz/: CMakeLists.txt  plugin.cpp  plugin.h
contrib/meshtex/: .gitignore  AllocatedMatrix.h  COMPILING  Doxyfile  GeneralFunctionDialog.cpp  GeneralFunctionDialog.h  GenericDialog.cpp  GenericDialog.h  GenericMainMenu.cpp  GenericMainMenu.h  GenericPluginUI.cpp  GenericPluginUI.h  GenericPluginUIMessages.h  GetInfoDialog.cpp  GetInfoDialog.h  HISTORY  LICENSE  MainMenu.cpp  MainMenu.h  MeshEntity.cpp  MeshEntity.h  MeshEntityMessages.h  MeshVisitor.cpp  MeshVisitor.h  PluginModule.cpp  PluginModule.h  PluginProperties.h  PluginRegistration.cpp  PluginUI.cpp  PluginUI.h  PluginUIMessages.h  README.md  RefCounted.cpp  RefCounted.h  SetScaleDialog.cpp  SetScaleDialog.h  UtilityMacros.h  localdirs.vsprops  mainpage.dox  meshtex.def  (+5 more)
contrib/prtview/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  LoadPortalFileDialog.cpp  LoadPortalFileDialog.h  PrtView.txt  portals.cpp  portals.h  prtview.cpp  prtview.h
contrib/shaderplug/: CMakeLists.txt  shaderplug.cpp  shaderplug.def  shaderplug.h
contrib/sunplug/: CMakeLists.txt  sunplug.cpp  sunplug.def  sunplug.h
contrib/terrain_generator/: brush_builder.cpp  brush_builder.h  noise.cpp  noise.h  terrain_engine.cpp  terrain_engine.h  terrain_generator.cpp  terrain_generator.def  terrain_generator.h  terrain_math.h
contrib/ufoaiplug/: CMakeLists.txt  ufoai.cpp  ufoai.h  ufoai_filters.cpp  ufoai_filters.h  ufoai_gtk.cpp  ufoai_gtk.h  ufoai_level.cpp  ufoai_level.h
include/: CMakeLists.txt  aboutmsg.h  cullable.cpp  cullable.h  editable.cpp  editable.h  iarchive.cpp  iarchive.h  ibrush.cpp  ibrush.h  icamera.cpp  icamera.h  idatastream.cpp  idatastream.h  ieclass.cpp  ieclass.h  ientity.cpp  ientity.h  ifilesystem.cpp  ifilesystem.h  ifiletypes.cpp  ifiletypes.h  ifilter.cpp  ifilter.h  igl.cpp  igl.h  iglrender.cpp  iglrender.h  igtkgl.cpp  igtkgl.h  iimage.cpp  iimage.h  imap.cpp  imap.h  imodel.cpp  imodel.h  ipatch.cpp  ipatch.h  iplugin.cpp  iplugin.h  (+49 more)
libs/: CMakeLists.txt  archivelib.cpp  archivelib.h  bytebool.cpp  bytebool.h  bytestreamutils.cpp  bytestreamutils.h  character.cpp  character.h  cmdlib.h  commandlib.cpp  commandlib.h  convert.cpp  convert.h  convhull_3d.h  ddslib.h  dragplanes.cpp  dragplanes.h  eclasslib.cpp  eclasslib.h  entitylib.cpp  entitylib.h  entityxml.cpp  entityxml.h  etclib.c  etclib.h  filematch.c  filematch.h  fs_filesystem.cpp  fs_filesystem.h  fs_path.cpp  fs_path.h  imagelib.cpp  imagelib.h  instancelib.cpp  instancelib.h  layers.h  maplib.cpp  maplib.h  mathlib.h  (+36 more)
libs/cmdlib/: .cvswrappers  CMakeLists.txt  cmdlib.cpp
libs/container/: CMakeLists.txt  array.cpp  array.h  cache.cpp  cache.h  container.cpp  container.h  hashfunc.cpp  hashfunc.h  hashtable.cpp  hashtable.h  stack.cpp  stack.h
libs/crnlib/: crnlib.cpp  crnlib.h
libs/ddslib/: CMakeLists.txt  ddslib.c
libs/debugging/: CMakeLists.txt  debugging.cpp  debugging.h
libs/etclib/: CMakeLists.txt  etclib.c
libs/filematch/: CMakeLists.txt  filematch.c
libs/generic/: CMakeLists.txt  arrayrange.cpp  arrayrange.h  bitfield.cpp  bitfield.h  callback.cpp  callback.h  callbackfwd.cpp  callbackfwd.h  constant.cpp  constant.h  enumeration.cpp  enumeration.h  functional.cpp  functional.h  object.cpp  object.h  reference.cpp  reference.h  referencecounted.cpp  referencecounted.h  span.h  static.cpp  static.h  vector.h
libs/gtkutil/: CMakeLists.txt  accelerator.cpp  (+52 more)
plugins/: CMakeLists.txt
radiant/: CMakeLists.txt  autosave.cpp  autosave.h  brush.cpp  brush.h  brush_primit.cpp  brush_primit.h  brushmanip.cpp  brushmanip.h  brushmodule.cpp  brushmodule.h  brushnode.cpp  brushnode.h  brushtokens.cpp  brushtokens.h  brushxml.cpp  brushxml.h  build.cpp  build.h  camwindow.cpp  camwindow.h  clippertool.cpp  clippertool.h  colors.cpp  colors.h  commands.cpp  commands.h  console.cpp  console.h  csg.cpp  csg.h  dialog.cpp  dialog.h  eclass.cpp  eclass.h  eclass_def.cpp  eclass_def.h  eclass_doom3.cpp  eclass_doom3.h  eclass_fgd.cpp  (+169 more)
tools/: CMakeLists.txt  version.c.in  version.h
(+957 files in other folders)
