add_library(includes
        aboutmsg.h
        cullable.cpp cullable.h
        editable.cpp editable.h
        iarchive.cpp iarchive.h
        ibrush.cpp ibrush.h
        icamera.cpp icamera.h
        idatastream.cpp idatastream.h
        ieclass.cpp ieclass.h
        ientity.cpp ientity.h
        ifilesystem.cpp ifilesystem.h
        ifiletypes.cpp ifiletypes.h
        ifilter.cpp ifilter.h
        igl.cpp igl.h
        iglrender.cpp iglrender.h
        igtkgl.cpp igtkgl.h
        iimage.cpp iimage.h
        imap.cpp imap.h
        imodel.cpp imodel.h
        ipatch.cpp ipatch.h
        iplugin.cpp iplugin.h
        ireference.cpp ireference.h
        irender.cpp irender.h
        iscenegraph.cpp iscenegraph.h
        iscriplib.cpp iscriplib.h
        iselection.cpp iselection.h
        ishaders.cpp ishaders.h
        itexdef.cpp itexdef.h
        itextstream.cpp itextstream.h
        itextures.cpp itextures.h
        itoolbar.cpp itoolbar.h
        iundo.cpp iundo.h
        mapfile.cpp mapfile.h
        modelskin.cpp modelskin.h
        moduleobserver.cpp moduleobserver.h
        modulesystem.cpp modulesystem.h
        nameable.cpp nameable.h
        namespace.cpp namespace.h
        preferencesystem.cpp preferencesystem.h
        qerplugin.cpp qerplugin.h
        renderable.cpp renderable.h
        selectable.cpp selectable.h
        stream_version.h
        version.h
        warnings.h
        windowobserver.cpp windowobserver.h
        )
