add_library(generic
        arrayrange.h
        bitfield.h
        callback.cpp callback.h
        callbackfwd.h
        constant.cpp constant.h
        enumeration.h
        functional.h
        object.cpp object.h
        reference.h
        referencecounted.h
        static.cpp static.h
        vector.h
        )
