add_library(generic
        arrayrange.cpp arrayrange.h
        bitfield.cpp bitfield.h
        callback.cpp callback.h
        callbackfwd.cpp callbackfwd.h
        constant.cpp constant.h
        enumeration.cpp enumeration.h
        functional.cpp functional.h
        object.cpp object.h
        reference.cpp reference.h
        referencecounted.cpp referencecounted.h
        static.cpp static.h
        vector.cpp vector.h
        )
